Update start script in package.json to specify port 3000

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint"
+    
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
