--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint"
-    
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
@@ -18,7 +18,8 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
